--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "license": "MIT",
   "engines": {
-    "node": "22.17.x"
+    "node": ">=22.17.0"
   },
   "scripts": {
     "dev": "next dev",
